fix. contact details overflow

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -106,6 +106,11 @@ input:focus {
   margin-right: 30px;
 }
 
+.contact dl {
+  max-height: 100px;
+  overflow: scroll;
+}
+
 .contact dt {
   margin-top: 10px;
   font-weight: bold;
